# Arwen-Egg

./: .gitignore  Cargo.toml  test.dot  test.txt
.github/: dependabot.yml
components_n_specs/: Cargo.toml
components_n_specs/src/: lib.rs
src/: lib.rs  main.rs  program_parser_interface.rs  sketch.rs  spec_parser_interface.rs  synthgraph.rs  utils.rs
src/data_structures/: example_hasher.rs  inverse_map.rs  min_heap.rs  mod.rs
src/language/: examples.rs  language.rs  mod.rs  types.rs
tests/: bool.rs  list.rs  nat.rs
tests/benchmarks/: bool_always_false.ml  bool_always_true.ml  bool_band.ml  bool_bor.ml  bool_impl.ml  bool_neg.ml  bool_xor.ml  elrond_bankersq_1.ml  elrond_bankersq_2.ml  elrond_batchedq_1.ml  elrond_batchedq_2.ml  elrond_customstk.mls  list_append.ml  motivating_example.ml  motivating_example.mls
tests/snapshots/: bool__bool_band.snap  bool__bool_band.snap.new  bool__bool_bor.snap  bool__bool_xor.snap  bool__bool_xor.snap.new  list__elrond_customstk.snap.new  list__list_append.snap.new  list__list_hd.snap.new  list__motivating_example.snap.new
