[package]
name = "arwen_egg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.3"
egg = "0.9.5"
petgraph = "0.6.3"
program_synthesis_parser = { git = "https://github.com/Pat-Lafon-Synthesis/program_synthesis_parser.git" }
hashconsing = { git = "https://github.com/Pat-Lafon-Synthesis/hashconsing.git", branch = "derive" }
itertools = "0.11.0"
insta = "1.31.0"
lazy_static = "1.4.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
z3 = { version = "0.12.1", features = ["static-link-z3"] }
arwen_elrond_ipc = { path = "../arwen_elrond_ipc" }

[dev-dependencies]
components_n_specs = { path = "components_n_specs" }
